# capella-ros-dock

./: .gitignore  CMakeLists.txt  README.md  package.xml
capella_ros_dock/: CMakeLists.txt  package.xml
capella_ros_dock/extend/: drive_goal_behaviors.hpp  git.pwd  hazards_vector_publisher.hpp  motion_control_node_backup.cpp  readme.txt  reflex_behavior.hpp  robot_state.cpp  wall_follow_states.cpp
capella_ros_dock/include/capella_ros_dock/: behaviors_scheduler.hpp  camera_point_cloud_process.hpp  docking_behavior.hpp  hazards_vector_publisher.hpp  manual_dock.hpp  motion_control_node.hpp  robot_state.hpp  simple_goal_controller.hpp  test_dock.hpp  tf2toodom.hpp  utils.hpp  wall_follow_behavior.hpp  wall_follow_states.hpp
capella_ros_dock/launch/: test_dock.launch.py
capella_ros_dock/params/: config.yaml
capella_ros_dock/src/: camera_point_cloud_process.cpp  docking_behavior.cpp  drive_goal_behaviors.cpp  hazards_vector_publisher.cpp  manual_dock.cpp  motion_control_node.cpp  point_cloud_test.cpp  reflex_behavior.cpp  test_dock.cpp  test_dock_node.cpp  tf2toodom.cpp  wall_follow_behavior.cpp
capella_ros_dock_msgs/: CMakeLists.txt  package.xml
capella_ros_dock_msgs/action/: Dock.action  DriveArc.action  DriveDistance.action  NavigateToPosition.action  RotateAngle.action  Undock.action  WallFollow.action
capella_ros_dock_msgs/msg/: DockStatus.msg  HazardDetection.msg  IrIntensity.msg  IrIntensityVector.msg  IrOpcode.msg  KidnapStatus.msg  StopStatus.msg  WheelStatus.msg  WheelVels.msg
capella_ros_dock_msgs/srv/: RobotPower.srv
include/capella_ros_dock/: behaviors_scheduler.hpp  hazards_vector_publisher.hpp  simple_goal_controller.hpp
install/: local_setup.sh  setup.sh
install/share/capella_ros_dock/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/share/capella_ros_dock_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/share/capella_ros_dock_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  capella_ros_dock_msgsConfig-version.cmake  capella_ros_dock_msgsConfig.cmake  capella_ros_dock_msgs__rosidl_typesupport_cExport-relwithdebinfo.cmake  capella_ros_dock_msgs__rosidl_typesupport_introspection_cExport.cmake  capella_ros_dock_msgs__rosidl_typesupport_introspection_cppExport-relwithdebinfo.cmake  export_capella_ros_dock_msgs__rosidl_generator_cExport-relwithdebinfo.cmake  export_capella_ros_dock_msgs__rosidl_generator_cppExport.cmake  export_capella_ros_dock_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_capella_ros_dock_msgs__rosidl_typesupport_fastrtps_cppExport-relwithdebinfo.cmake  export_capella_ros_dock_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/share/capella_ros_dock_msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/share/capella_ros_dock_msgs/msg/: HazardDetection.idl  HazardDetection.msg  HazardDetectionVector.idl  HazardDetectionVector.msg  KidnapStatus.idl  KidnapStatus.msg
install/share/capella_ros_dock_msgs/srv/: EStop.idl  EStop.srv  EStop_Request.msg  EStop_Response.msg  RobotPower.idl  RobotPower.srv  RobotPower_Request.msg  RobotPower_Response.msg
install/share/capella_ros_msg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/share/capella_ros_msg/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  capella_ros_msgConfig-version.cmake  capella_ros_msgConfig.cmake  capella_ros_msg__rosidl_typesupport_cppExport-relwithdebinfo.cmake  capella_ros_msg__rosidl_typesupport_cppExport.cmake  capella_ros_msg__rosidl_typesupport_introspection_cExport.cmake  capella_ros_msg__rosidl_typesupport_introspection_cppExport-relwithdebinfo.cmake  export_capella_ros_msg__rosidl_generator_cExport.cmake  export_capella_ros_msg__rosidl_generator_cppExport.cmake  export_capella_ros_msg__rosidl_generator_pyExport-relwithdebinfo.cmake  export_capella_ros_msg__rosidl_typesupport_fastrtps_cppExport-relwithdebinfo.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/share/capella_ros_msg/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/share/capella_ros_msg/msg/: AtomizeSwitchCtrStu.idl  AtomizeSwitchCtrStu.msg  Battery.idl  Battery.msg  ContactDriveStu.idl  ContactDriveStu.msg  DetectResult.idl  DetectResult.msg  Imu.idl  Imu.msg  IrData.idl  IrData.msg  PID.idl  PID.msg  SingleDetector.idl  SingleDetector.msg  Velocities.idl  Velocities.msg
install/share/capella_ros_msg/srv/: ChargePileWifi.idl  ChargePileWifi.srv  ChargePileWifi_Request.msg  ChargePileWifi_Response.msg
install/share/capella_ros_service_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/share/capella_ros_service_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  rosidl_cmake-extras.cmake  (+14 more)
log/: latest_build
params/: config.yaml
src/: docking_behavior.cpp  hazards_vector_publisher.cpp
(+500 files in other folders)
